--- a/ui-test/Base.lproj/MainMenu.xib
+++ b/ui-test/Base.lproj/MainMenu.xib
@@ -16,18 +16,9 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
-                <outlet property="viewController" destination="OEZ-SZ-dWX" id="c6c-Jh-9dh"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
-        <viewController id="OEZ-SZ-dWX" customClass="ViewController">
-            <connections>
-                <outlet property="outlineView" destination="in3-gx-iUY" id="KYJ-Sj-lwy"/>
-                <outlet property="requestView" destination="7j2-KK-nXa" id="nkh-2B-zkL"/>
-                <outlet property="responseView" destination="x6h-xD-MDJ" id="n6L-m9-9qZ"/>
-            </connections>
-        </viewController>
-        <customObject id="oC8-aA-cBZ" customClass="CapturedTraffic"/>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
@@ -154,7 +145,7 @@
                                     <rect key="frame" x="1" y="0.0" width="219" height="343"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="jyW-YI-xUM" viewBased="YES" indentationPerLevel="16" outlineTableColumn="cyM-eG-WRu" id="in3-gx-iUY">
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="LFQ-ha-8aQ" viewBased="YES" indentationPerLevel="5" outlineTableColumn="cyM-eG-WRu" id="in3-gx-iUY">
                                             <rect key="frame" x="0.0" y="0.0" width="219" height="320"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -174,7 +165,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView identifier="HostCell" id="cqW-yi-uwf">
+                                                        <tableCellView id="cqW-yi-uwf">
                                                             <rect key="frame" x="1" y="1" width="216" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
@@ -192,31 +183,9 @@
                                                                 <outlet property="textField" destination="4qJ-6L-2ao" id="0di-ic-Oav"/>
                                                             </connections>
                                                         </tableCellView>
-                                                        <tableCellView identifier="TransactionCell" id="JxZ-KH-FrH">
-                                                            <rect key="frame" x="1" y="20" width="216" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Npy-3d-2D0">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="z3L-Qw-Jcv">
-                                                                        <font key="font" metaFont="system"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
-                                                            </subviews>
-                                                            <connections>
-                                                                <outlet property="textField" destination="Npy-3d-2D0" id="PEr-7h-xfb"/>
-                                                            </connections>
-                                                        </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
-                                            <connections>
-                                                <outlet property="dataSource" destination="oC8-aA-cBZ" id="FnO-KM-nI5"/>
-                                                <outlet property="delegate" destination="oC8-aA-cBZ" id="aB8-Hm-6Ov"/>
-                                            </connections>
                                         </outlineView>
                                     </subviews>
                                 </clipView>
@@ -231,7 +200,7 @@
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <tableHeaderView key="headerView" id="jyW-YI-xUM">
+                                <tableHeaderView key="headerView" id="LFQ-ha-8aQ">
                                     <rect key="frame" x="0.0" y="0.0" width="219" height="23"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
