--- a/proxy_cocoa/Base.lproj/MainMenu.xib
+++ b/proxy_cocoa/Base.lproj/MainMenu.xib
@@ -16,6 +16,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="capturedTraffic" destination="oC8-aA-cBZ" id="gWg-er-iAo"/>
                 <outlet property="viewController" destination="OEZ-SZ-dWX" id="c6c-Jh-9dh"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -146,22 +147,22 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <stackView distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8dU-Eu-qD6">
-                        <rect key="frame" x="7" y="-11" width="529" height="360"/>
+                        <rect key="frame" x="7" y="-11" width="658" height="360"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3U1-1S-of3">
-                                <rect key="frame" x="0.0" y="16" width="221" height="344"/>
+                                <rect key="frame" x="0.0" y="16" width="350" height="344"/>
                                 <clipView key="contentView" id="GUs-7X-6QS">
-                                    <rect key="frame" x="1" y="0.0" width="219" height="343"/>
+                                    <rect key="frame" x="1" y="0.0" width="348" height="343"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="jyW-YI-xUM" viewBased="YES" indentationPerLevel="16" outlineTableColumn="cyM-eG-WRu" id="in3-gx-iUY">
-                                            <rect key="frame" x="0.0" y="0.0" width="219" height="320"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="348" height="320"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="216" minWidth="40" maxWidth="1000" id="cyM-eG-WRu">
+                                                <tableColumn width="345" minWidth="40" maxWidth="1000" id="cyM-eG-WRu">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Host">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -175,14 +176,14 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView identifier="HostCell" id="cqW-yi-uwf">
-                                                            <rect key="frame" x="1" y="1" width="216" height="17"/>
+                                                            <rect key="frame" x="1" y="1" width="345" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4qJ-6L-2ao">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="154" height="14"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="wVL-BK-JEg">
-                                                                        <font key="font" metaFont="system"/>
+                                                                    <textFieldCell key="cell" controlSize="small" sendsActionOnEndEditing="YES" alignment="left" title="Table View Cell" id="wVL-BK-JEg">
+                                                                        <font key="font" metaFont="smallSystem"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
@@ -193,14 +194,14 @@
                                                             </connections>
                                                         </tableCellView>
                                                         <tableCellView identifier="TransactionCell" id="JxZ-KH-FrH">
-                                                            <rect key="frame" x="1" y="20" width="216" height="17"/>
+                                                            <rect key="frame" x="1" y="20" width="345" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Npy-3d-2D0">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
+                                                                <textField identifier="Traffic" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Npy-3d-2D0">
+                                                                    <rect key="frame" x="0.0" y="-11" width="294" height="22"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="z3L-Qw-Jcv">
-                                                                        <font key="font" metaFont="system"/>
+                                                                    <textFieldCell key="cell" controlSize="mini" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" identifier="Traffic" title="Table View Cell" id="z3L-Qw-Jcv">
+                                                                        <font key="font" metaFont="system" size="9"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
@@ -221,7 +222,7 @@
                                     </subviews>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="221" id="FFS-5W-Dh6"/>
+                                    <constraint firstAttribute="width" constant="350" id="FFS-5W-Dh6"/>
                                 </constraints>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="A5W-lJ-5jJ">
                                     <rect key="frame" x="1" y="328" width="0.0" height="15"/>
@@ -232,12 +233,12 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" id="jyW-YI-xUM">
-                                    <rect key="frame" x="0.0" y="0.0" width="219" height="23"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="348" height="23"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DlX-lB-lSg">
-                                <rect key="frame" x="229" y="16" width="300" height="344"/>
+                                <rect key="frame" x="358" y="16" width="300" height="344"/>
                                 <subviews>
                                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbi-2j-9r0">
                                         <rect key="frame" x="0.0" y="176" width="300" height="168"/>
@@ -338,7 +339,7 @@
                     <constraint firstAttribute="trailing" secondItem="8dU-Eu-qD6" secondAttribute="trailing" constant="20" id="QcT-p4-E7Q"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="215" y="106"/>
+            <point key="canvasLocation" x="215" y="105.5"/>
         </window>
     </objects>
 </document>
